--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@popperjs/core": "^2.10.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
+    "ng2-animate-on-scroll": "^2.3.2",
+    "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "typed.js": "^2.1.0",
     "zone.js": "~0.11.4"
   },
